# hai

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-lint.in  requirements-lint.txt  requirements-test.in  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
hai/: boto3_multipart_upload.py  event_emitter.py  parallel.py  pipe_pump.py  rate_limiter.py
hai_tests/: test_crlf_pipe_pump.py  test_event_emitter.py  test_multipart_upload.py  test_parallel.py  test_pipe_pump.py  test_rate_limiter.py
