[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hai"
dynamic = ["version"]
description = "Toolbelt library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Valohai", email = "dev@valohai.com" },
]

[project.urls]
Homepage = "https://github.com/valohai/hai"

[tool.hatch.version]
path = "hai/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/hai",
]

[tool.mypy]
strict = true
exclude = "hai_tests/test_.*"

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moto.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
mccabe.max-complexity = 10
select = [
    "B", # bugbear
    "C90", # mccabe
    "COM", # trailing commas
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "T", # debugger and print
    "UP", # upgrade
    "W", # pycodestyle
]
ignore = [
    "E741", # Ambiguous variable name
]

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]
