[metadata]
name = hai
version = attr: hai.__version__
author = Valohai
author_email = dev@valohai.com
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
description = Toolbelt library
url = https://github.com/valohai/hai

[options]
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = .
exclude = hai_tests

[flake8]
ignore = E741
max-line-length = 119
max-complexity = 10

[tool:pytest]
norecursedirs = .git .tox

[isort]
profile = black
line_length = 120
multi_line_output = 3
wrap_length = 120
