[metadata]
name = hai
version = attr: hai.__version__
author = Valohai
author_email = dev@valohai.com
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
description = Toolbelt library
url = https://github.com/valohai/hai

[options]
packages = find:
python_requires = >=3.7
include_package_data = true

[options.packages.find]
where = .
exclude = hai_tests

[tool:pytest]
norecursedirs = .git .tox
